; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/i2c/extr_i2c.c_reset_bus.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/i2c/extr_i2c.c_reset_bus.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iiccmd = type { i32 }

@O_RDWR = common dso_local global i32 0, align 4
@stderr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [53 x i8] c"Error opening I2C controller (%s) for resetting: %s\0A\00", align 1
@errno = common dso_local global i32 0, align 4
@EX_NOINPUT = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [33 x i8] c"Resetting I2C controller on %s: \00", align 1
@I2CRSTCARD = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [11 x i8] c"error: %s\0A\00", align 1
@EX_IOERR = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [4 x i8] c"OK\0A\00", align 1
@EX_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i8*)* @reset_bus to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @reset_bus(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.iiccmd, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = getelementptr inbounds %struct.iiccmd, %struct.iiccmd* %4, i32 0, i32 0
  store i32 %0, i32* %8, align 4
  store i8* %1, i8** %5, align 8
  %9 = load i8*, i8** %5, align 8
  %10 = load i32, i32* @O_RDWR, align 4
  %11 = call i32 @open(i8* %9, i32 %10)
  store i32 %11, i32* %6, align 4
  %12 = load i32, i32* %6, align 4
  %13 = icmp eq i32 %12, -1
  br i1 %13, label %14, label %21

14:                                               ; preds = %2
  %15 = load i32, i32* @stderr, align 4
  %16 = load i8*, i8** %5, align 8
  %17 = load i32, i32* @errno, align 4
  %18 = call i8* @strerror(i32 %17)
  %19 = call i32 @fprintf(i32 %15, i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str, i64 0, i64 0), i8* %16, i8* %18)
  %20 = load i32, i32* @EX_NOINPUT, align 4
  store i32 %20, i32* %3, align 4
  br label %39

21:                                               ; preds = %2
  %22 = load i8*, i8** %5, align 8
  %23 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0), i8* %22)
  %24 = load i32, i32* %6, align 4
  %25 = load i32, i32* @I2CRSTCARD, align 4
  %26 = call i32 @ioctl(i32 %24, i32 %25, %struct.iiccmd* %4)
  store i32 %26, i32* %7, align 4
  %27 = load i32, i32* %6, align 4
  %28 = call i32 @close(i32 %27)
  %29 = load i32, i32* %7, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %36

31:                                               ; preds = %21
  %32 = load i32, i32* @errno, align 4
  %33 = call i8* @strerror(i32 %32)
  %34 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0), i8* %33)
  %35 = load i32, i32* @EX_IOERR, align 4
  store i32 %35, i32* %3, align 4
  br label %39

36:                                               ; preds = %21
  %37 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0))
  %38 = load i32, i32* @EX_OK, align 4
  store i32 %38, i32* %3, align 4
  br label %39

39:                                               ; preds = %36, %31, %14
  %40 = load i32, i32* %3, align 4
  ret i32 %40
}

declare dso_local i32 @open(i8*, i32) #1

declare dso_local i32 @fprintf(i32, i8*, i8*, i8*) #1

declare dso_local i8* @strerror(i32) #1

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @ioctl(i32, i32, %struct.iiccmd*) #1

declare dso_local i32 @close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
